ImpressCMS ChangeLog

== Impresscms 1.1.2==

'''Fixed'''
* Issue when doubleclicking a link and unexpectedly getting logged out (PHP issue) (vaughan)
* undefined index xoopsUserId in register.php (vaughan)

===2008-12-29 : 1.1.1 Final===

'''Fixed'''
* #2424282: Notice: Undefined index: reg_i in file /admin.php line 41 (vaughan)
* Issue with icmscontent table always being updated when viewing content.php should only be the 'read x times' that is updated. (vaughan)

'''Improved'''
* #2354713: improving session regenerate method, as it wasn't working as it should. & causes conflict with formmail reported by Thomas. have changed the cookie name from PHPSESSID and renamed to custom session name or if not defined (or enabled) it uses 1st 10 chars from sitename. (vaughan)

===2008-12-12 : 1.1.1 RC2===

'''Fixed'''
* #2354713: Security issue in SESSION id (Fixation), previous fix caused problems with some users being logged out sporadically. (vaughan)
* XSS vulnerability in blocksadmin.php $_GET['selmod'], potential (but not necessarily vulnerable) exploit in $_GET['editor']. (GiJoe/vaughan)

===2008-12-2 : 1.1.1 RC===

'''Fixed'''
* #2354713: Security issue in SESSION id (vaughan/malanciault)
* #2300634: Blocks Positions admin not totaly secured (real_therplima/trabis)

'''Improved'''
* If an email notification is sent on PM, the user's email will appear in the From header if he has activated "Allow other users to view my email address" (malanciaut)

== Impresscms 1.1==

===2008-10-31 : 1.1 Final===

'''Fixed'''
* Issues with content menu in RTL. (stranger)
* Issues with registration not completed with passwordmeter. (stranger)
* Issues with too easy captcha configs. (stranger)
* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)